--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -409,6 +409,12 @@ img {
   justify-content: center;
   row-gap: 5.5rem;
 }
+.popular__container__center {
+  padding-top: 4rem;
+  grid-template-columns: 250px;
+  justify-content: center;
+  row-gap: 5.5rem;
+}
 
 .popular__card {
   position: relative;
